# localserver

./: Cargo.toml  LICENSE  README.md  ide-server.service
migrations/: 20240101000001_init.sql
src/: db.rs  ide-server.service  main.rs  middleware.rs  models.rs
src/handlers/: files.rs  mod.rs  projects.rs  snippets.rs
